# merge-files

./: CMakeLists.txt  README.md
include/: FileMerger.h  ThreadPool.h  Utils.h
src/: FileMerger.cpp  ThreadPool.cpp  Utils.cpp  main.cpp
tests/: FileMergerTest.cpp  ThreadPoolTest.cpp  UtilsTest.cpp
